--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 {% endhighlight %}
 
 <figure class="sign">
-  <a href="/resources/screenshots/photo_siicm.png" title="Full size">
+  <a href="/resources/screenshots/photo_siicm.png" title="Full size" type="image/png">
     <img src="/resources/preview/photo_siicm_prev.jpg" alt="Photo">
   </a>
   <figcaption>Photo by Grineva O.V.</figcaption>
@@ -63,7 +63,7 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 <blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">
   The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.
 </blockquote>
-<p align="right">
+<p style="text-align:right;">
   &copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/" title="ArchWiki">ArchWiki</a>
 </p>
 
