--- a/_posts/2014-03-06-site-changes.html
+++ b/_posts/2014-03-06-site-changes.html
@@ -8,16 +8,19 @@ title: Site changes
 short: site-changes
 description: I decided to change my site. You may find short list of changes below.
 ---
-<h2><a name="list" class="anchor" href="#list"><span class="octicon octicon-link"></span></a>The list of changes:</h2>
+<h2><a href="#list" class="anchor" name="list"><span class="octicon octicon-link"></span></a>The list of changes:</h2>
 <ul>
-  <li>I rented a <code>arcanis.name</code> domain. Now I have a normal address, as well as all normal people have it. Small description of how to do it. Firstly, you should rent domain and activate DNS editing (it is called <a href="http://www.nic.ru/dns/service/dns_hosting/">DNS-master</a> for Ru-center). I pay about $30 in year. Then you should create CNAME file in your repository; this file has line with your domain name. And finally you should create two DNS records for your domain:
+  <li>I rented a <code>arcanis.name</code> domain. Now I have a normal address, as well as all normal people have it. Small description of how to do it. Firstly, you should rent domain and activate DNS editing (it is called <a href="http://www.nic.ru/dns/service/dns_hosting/" title="Service page">DNS-master</a> for Ru-center). I pay about $30 in year. Then you should create CNAME file in your repository; this file has line with your domain name. And finally you should create two DNS records for your domain:
+
 {% highlight bash %}
 @    A   192.30.252.153
 @    A   192.30.252.154
 # redirection from www.*
 www CNAME   @
 {% endhighlight %}
+
 (Symbol <code>@</code> means you root domain.) And next wait for two hours. You may find out the result as follows:
+
 {% highlight bash %}
 $ dig domain.name +nostats +nocomments +nocmd
 ; <<>> DiG 9.9.2-P2 <<>> domain.name +nostats +nocomments +nocmd
@@ -26,9 +29,11 @@ $ dig domain.name +nostats +nocomments +nocmd
 domain.name.           912     IN      A       192.30.252.153
 domain.name.           912     IN      A       192.30.252.154
 ...
-{% endhighlight %}</li>
-  <li>Also I've created <a href="ftp://repo.arcanis.name/repo">my own repo</a>, which will contain some AUR packages that I'm using. Support of both architectures is planned.</li>
+{% endhighlight %}
+  </li>
+  <li>Also I've created <a href="ftp://repo.arcanis.name/repo" title="Repository">my own repo</a>, which will contain some AUR packages that I'm using. Support of both architectures is planned.</li>
   <li>Since the repo requires ftp protocol, I've changed samba shared folders to ftp. The problem of access has been resolved by using mount options:
+
 {% highlight bash %}
 # only read rights
 /home/arcanis/music                         /srv/ftp/music  ext4    defaults,bind,ro   0 0
@@ -36,8 +41,10 @@ domain.name.           912     IN      A       192.30.252.154
 # read and write rights (the file has size 2 Gb)
 /home/arcanis/share.fs                      /srv/ftp/share  ext4    defaults,rw   0 0
 {% endhighlight %}
+
 Login on special user and option <code>anon_world_readable_only=YES</code> are used for prevent access to the music directory.
 Also here is my <code>/etc/vsftpd.conf</code> configuration file:
+
 {% highlight bash %}
 anonymous_enable=YES
 anon_root=/srv/ftp
@@ -62,6 +69,7 @@ Now let's add redirection from <code>repo.arcanis.name</code> to the needed IP a
 {% highlight bash %}
 repo   A   89.249.170.38
 {% endhighlight %}
+
   </li>
   <li>Also there are plans to buy a server for compiling packages and hosting the repository, filesharing and backups.</li>
 </ul>
