--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 ------END GEEK CODE BLOCK------
 {% endhighlight %}
 
-<figure class="sign">
+<figure class="img">
   <a href="/resources/screenshots/photo_siicm.png" title="Full size" type="image/png">
     <img src="/resources/preview/photo_siicm_prev.jpg" alt="Photo">
   </a>
