--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -165,7 +165,7 @@ systemctl restart git-etc
 <h3><a href="#screenshots" class="anchor" name="screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
 <p>(Screenshots in Russian, but GUI has English translation.)</p>
 
-<p>
+<div class="thumbnails">
   {% assign scrdesc = "Main window" %}
   {% assign scrname = "git-etc_mainwindow" %}
   {% include prj_scr.html %}
@@ -181,5 +181,5 @@ systemctl restart git-etc
   {% assign scrdesc = "Roll back window" %}
   {% assign scrname = "git-etc_rollbackwindow" %}
   {% include prj_scr.html %}
-</p>
+</div>
 <!-- end of gui block -->
