--- a/projects/oblikuestrategies.html
+++ b/projects/oblikuestrategies.html
@@ -93,12 +93,12 @@ kbuildsycoca4 &> /dev/null
 <h2><a href="#gui" class="anchor" name="gui"><span class="octicon octicon-link"></span></a>Graphical user interface</h2>
 
 <h3><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
-<p>
+<div class="thumbnails">
   {% assign scrdesc = "Widget" %}
   {% assign scrname = "oblikuestrategies_widget" %}
   {% include prj_scr.html %}
   {% assign scrdesc = "Configuration window" %}
   {% assign scrname = "oblikuestrategies_config" %}
   {% include prj_scr.html %}
-</p>
+</div>
 <!-- end of gui block -->
