--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -596,7 +596,7 @@ sudo make install
 <h2><a href="#gui" class="anchor" name="gui"><span class="octicon octicon-link"></span></a>Graphical user interface</h2>
 
 <h2><a href="#screenshots" class="anchor" name="screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h2>
-<p>
+<div class="thumbnails">
   {% assign scrdesc = "Widget (clickable)" %}
   {% assign scrname = "pytextmonitor_widget" %}
   {% include prj_scr.html %}
@@ -618,4 +618,4 @@ sudo make install
   {% assign scrdesc = "Tooltips" %}
   {% assign scrname = "pytextmonitor_tooltips" %}
   {% include prj_scr.html %}
-</p>
+</div>
