--- a/_posts/2014-07-17-writting-own-completions-p2.html
+++ b/_posts/2014-07-17-writting-own-completions-p2.html
@@ -6,7 +6,7 @@ layout: paper
 tags: linux, development
 title: Writting own Shell completions. Bash
 short: writting-own-completions-p2
-description: <figure class="sign"><img src="/resources/papers/bash_completion.png" alt="bash_completion"></figure> Some basics of creating a completion files for own application are described in these articles.
+description: <figure class="img"><img src="/resources/papers/bash_completion.png" alt="bash_completion"></figure> Some basics of creating a completion files for own application are described in these articles.
 ---
 <h2><a href="#preamble" class="anchor" name="preamble"><span class="octicon octicon-link"></span></a>Preamble</h2>
 <p>While developing <a href="/ru/projects/netctl-gui" title="Netctl-gui project page">one of my projects</a> I have wanted to add completion files. I have already tried to create these files, but I was too lazy to read some manuals about it.</p>
