--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -125,7 +125,7 @@ sudo make install
 <p>Graphical interface provides by <code>netctl-gui</code> application.</p>
 
 <h3><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
-<p>
+<div class="thumbnails">
   {% assign scrdesc = "DataEngine" %}
   {% assign scrname = "netctl-gui_dataengine" %}
   {% include prj_scr.html %}
@@ -159,5 +159,5 @@ sudo make install
   {% assign scrdesc = "Settings window" %}
   {% assign scrname = "netctl-gui_settings" %}
   {% include prj_scr.html %}
-</p>
+</div>
 <!-- end of gui block -->
