edited main russian pages

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ title: About me
           <a href="https://github.com/arcan1s" title="GitHub">GitHub Profile</a><br>
           <a href="https://www.archlinux.org/trustedusers/#arcanis" title="TU profile">TU Profile on archlinux.org</a><br>
           <a href="http://istina.msu.ru/profile/arcanis" title="Publications">Some of my publications</a><br>
-          PGP signature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a><br>
+          PGP signature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01" title="pgp.mit.edu">0x31361F01</a><br>
           <a href="ftp://repo.arcanis.name/public" title="Keys">Public keys</a>
         </p>
 
@@ -26,7 +26,6 @@ title: About me
           Jabber: arcanis (at) jabber (dot) ru<br>
           E-mail: <a href="mailto:darkarcanis@mail.ru" title="email">darkarcanis (at) mail (dot) ru</a>
         </p>
-
       </header>
       <section>
 
