--- a/ru/about.html
+++ b/ru/about.html
@@ -11,20 +11,22 @@ title: Обо мне
     <div class="wrapper">
       <header>
         <h1>{{ page.title }}</h1>
-
-        <p class="view"><a href="https://github.com/arcan1s">Профиль на GitHub</a><br>
-        <a href="https://www.archlinux.org/trustedusers/#arcanis">Профиль TU на archlinux.org</a><br>
-        <a href="http://istina.msu.ru/profile/arcanis">Некоторые из моих публикаций</a><br>
-        PGP: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a><br>
-        <a href="ftp://repo.arcanis.name/public">Публичные ключи</a></p>
+        <p class="view">
+          <a href="https://github.com/arcan1s" title="GitHub">Профиль на GitHub</a><br>
+          <a href="https://www.archlinux.org/trustedusers/#arcanis" title="Профиль TU">Профиль TU на archlinux.org</a><br>
+          <a href="http://istina.msu.ru/profile/arcanis" title="Публикации">Некоторые из моих публикаций</a><br>
+          PGP: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01" title="pgp.mit.edu">0x31361F01</a><br>
+          <a href="ftp://repo.arcanis.name/public" title="Ключи">Публичные ключи</a>
+        </p>
 
         <h2>Контакты</h2>
-        <p class="view">Никнейм: arcanis/arcan1s<br>
-        IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a><br>
-        ICQ: 407-398-235 <img src="http://www.icq.com/scripts/online.dll?icq=407398235&img=27" border="0"><br>
-        Jabber: arcanis (at) jabber (dot) ru<br>
-        E-mail: <a href="mailto:darkarcanis@mail.ru">darkarcanis (at) mail (dot) ru</a></p>
-
+        <p class="view">
+          Никнейм: arcanis/arcan1s<br>
+          IRC: <a href="irc://irc.freenode.net/arcan1s" title="Freenode">arcan1s</a><br>
+          ICQ: 407-398-235<br>
+          Jabber: arcanis (at) jabber (dot) ru<br>
+          E-mail: <a href="mailto:darkarcanis@mail.ru" title="email">darkarcanis (at) mail (dot) ru</a>
+        </p>
       </header>
       <section>
 
@@ -35,31 +37,41 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 ------END GEEK CODE BLOCK------
 {% endhighlight %}
 
-<p align="center"><a href="/resources/screenshots/photo_siicm.png"><img src="/resources/preview/photo_siicm_prev.jpg"></a></p>
-<p align="right"><i>Фото Гриневой О.В.</i></p>
+<figure class="img">
+  <a href="/resources/screenshots/photo_siicm.png" title="Полный размер" type="image/png">
+    <img src="/resources/preview/photo_siicm_prev.jpg" alt="Фото">
+  </a>
+  <figcaption>Фото Гриневой О.В.</figcaption>
+</figure>
 
-<p>Меня зовут Алексеев Евгений, <a href="http://lurkmore.to/%D0%9C%D0%BD%D0%B5_20_%D0%B8_%D1%8F_%D0%B1%D0%BE%D1%80%D0%BE%D0%B4%D0%B0%D1%82">мне 20 и я бородат</a>. Обычно, мой никнейм в Интернете <code>arcan1s</code>, хотя в русскоязычном сегменте - <code>arcanis</code>. Я выпускник <a href="http://www.chem.msu.ru/">Химического факультета</a> Московского государственного университета. Сейчас я аспирант и работаю в моем Университете. Моя специальность - теоретическая химия (типа молекулярной физики и немного квантовой химии).</p>
+<p>Меня зовут Алексеев Евгений, <a href="http://lurkmore.to/%D0%9C%D0%BD%D0%B5_20_%D0%B8_%D1%8F_%D0%B1%D0%BE%D1%80%D0%BE%D0%B4%D0%B0%D1%82" title="lurkmore">мне 20 и я бородат</a>. Обычно, мой никнейм в Интернете <code>arcan1s</code>, хотя в русскоязычном сегменте - <code>arcanis</code>. Я выпускник <a href="http://www.chem.msu.ru/" title="Сайт факультета">Химического факультета</a> Московского государственного университета. Сейчас я аспирант и работаю в моем Университете. Моя специальность - теоретическая химия (типа молекулярной физики и немного квантовой химии).</p>
 
-<p>На досуге я пишу небольшие приложения на C, C++ и Python (и скрипты на Shell). Чтобы не выглядеть, как бородатый нерд, иногда я слушаю музыку и читаю книги <a href="http://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B0%D0%BD">Роберта Джордана</a> или <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D1%82%D0%B8%D0%BD,_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B6_%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4">Джорджа Мартина</a> (и другие подобные). (Хотя,мои друзья все равно говорят мне, что я выгляжу, как бородатый нерд.) Музыка, которую я обычно слушаю, может быть найдена на <a href="ftp://repo.arcanis.name/">моем домашнем сервере</a>.</p>
+<p>На досуге я пишу небольшие приложения на C, C++ и Python (и скрипты на Shell). Чтобы не выглядеть, как бородатый нерд, иногда я слушаю музыку и читаю книги <a href="http://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B0%D0%BD" title="Wiki">Роберта Джордана</a> или <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D1%82%D0%B8%D0%BD,_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B6_%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4" title="Wiki">Джорджа Мартина</a> (и другие подобные). (Хотя,мои друзья все равно говорят мне, что я выгляжу, как бородатый нерд.) Музыка, которую я обычно слушаю, может быть найдена на <a href="ftp://repo.arcanis.name/" title="ftp">моем домашнем сервере</a>.</p>
 <label class="spoiler">
-<input type="checkbox" tabindex="-1">
+  <input type="checkbox" tabindex="-1">
   <div class="box">
-    <p>Информация по подключению
-    <blockquote>
-      Пользователь <code>music</code>, пароль такой же.</p>
-    </blockquote>
+    <p>
+      Информация по подключению
+      <blockquote>
+        Пользователь <code>music</code>, пароль такой же.
+      </blockquote>
+    </p>
   </div>
 </label>
 
-<p>Также я являюсь пользователем <a href="https://www.archlinux.org/">Archlinux</a>. В октябре 2013 я стал Доверенным пользователем Archlinux:</p>
+<p>Также я являюсь пользователем <a href="https://www.archlinux.org/" title="Archlinux">Archlinux</a>. В октябре 2013 я стал Доверенным пользователем Archlinux:</p>
 <blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">
-The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.</blockquote>
-<p align="right">&copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">ArchWiki</a></p>
+  The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.</blockquote>
+<p style="text-align:right;">
+  &copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/" title="ArchWiki">ArchWiki</a>
+</p>
 
 <p>Вся контактная информация может быть найдена слева. Не стесняйтесь связываться со мной по любому вопросу (если что - пошлю). Ах да, чуть не забыл. Если Вы будете писать мне через ICQ или Jabber, Вы должны корректно ответить на вопрос антиспам бота. Вопрос:</p>
+
 {% highlight c %}
 int i = 1;
 i = ++i + ++i;
 return i;
 {% endhighlight %}
+
 <p>Правильный ответ <code>5</code> (или <code>6</code>, как больше нравится).</p>
