--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ page.title }}</title>
-    <meta name="author" content="Unknown" >
+    <title>Error 404</title>
+    <meta name="author" content="Unknown">
     <meta name="description" content="arcanis' homepage">
     <link href="/authors" rel="license" type="text/html">
 
@@ -14,29 +14,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+      <script type="text/javascript">
+        document.createElement('figure');
+        document.createElement('figcaption');
+      </script>
     <![endif]-->
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header class="rainbow">
         <h1>404</h1>
         <p class="view">Page not found!</p>
       </header>
       <section>
+
 <!-- redirection to russian page -->
-  <script type="text/javascript">
-    var languageinfo=navigator.language? navigator.language : navigator.userLanguage
-    function redirectpage(dest) {
-      if (window.location.replace) window.location.replace(dest)
-      else window.location=dest
-    }
-    if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/404")
-  </script>
+<script type="text/javascript">
+  var languageinfo=navigator.language? navigator.language : navigator.userLanguage
+  function redirectpage(dest) {
+    if (window.location.replace) window.location.replace(dest)
+    else window.location=dest
+  }
+  if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/404")
+</script>
 <!-- redirection to russian page -->
 
 <h3>Hello!</h3>
 
-<img src="/resources/pinkiepie.png" alt="pinkiepie">
+<figure class="img">
+  <img src="/resources/pinkiepie.png" alt="pinkiepie">
+</figure>
 
 <p>I'm Pinkie Pie. You are seeing me because you want a page that I could not find. I'm sorry. Seriously. I'll try to work better. But now I may suggest you to return to the <a href="/" title="Home">Home</a> or <a href="javascript:history.back()" title="Back">back</a>.</p>
 
