--- a/authors.html
+++ b/authors.html
@@ -13,11 +13,12 @@ title: Authors
       </header>
       <section>
 
-<p>The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk" title="Beerware license">Beerware</a> license:</p>
+<p>The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk" title="Beerware license">Beerware</a> license:
 <blockquote>
   "THE BEER-WARE LICENSE" (Revision 42):<br>
   Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.
 </blockquote>
+</p>
 
 <p>This site uses:
   <ul>
@@ -26,11 +27,13 @@ title: Authors
     <li>Disqus, which is used for comment block, has own <a href="http://help.disqus.com/customer/portal/articles/466260-terms-of-service" title="Disqus license">custom license</a>.</li>
     <li>The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html" title="Forum post">markeley</a> and <a href="http://habrahabr.ru/post/167151/" title="Habrahabr post">Defff</a> and it looks like it has no any license.</li>
     <li>This site uses RSS template, which was suggested by <a href="https://github.com/snaptortoise/jekyll-rss-feeds" title="GitHub">snaptortoise</a>.</li>
-    <li>Google Custom Search is licensed under own <a href="https://support.google.com/customsearch/answer/1714300" title="Google license">custom license</a>.</li>
+    <li>Google Custom Search is licensed under own <a href="https://support.google.com/customsearch/answer/1714300" title="GCS license">custom license</a>.</li>
     <li>Sharethis have own <a href="http://www.sharethis.com/legal/publisher-terms-of-use" title="ShareThis license">custom license</a> too.</li>
   </ul>
 </p>
 
-<p>Special thanks to <a href="http://monztruo.deviantart.com/" title="Devianart">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946" title="Source image">his icon</a>.</p>
+<p>Special thanks to <a href="http://monztruo.deviantart.com/" title="Deviantart">Monztruo</a> (I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946" title="Source image">his icon</a>) and <a href="http://hanabell1.deviantart.com/" title="Deviantart">HanaBell1</a> (<a href="http://hanabell1.deviantart.com/art/RES-Rainbow-PNG-398876448" title="Source image">a nice rainbow</a>).
 
-<p align="center">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
+</p>
+
+<p style="text-align:center;">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
