--- a/ru/authors.html
+++ b/ru/authors.html
@@ -14,24 +14,26 @@ title: Авторы
       </header>
       <section>
 
-<p>Код и контент данного сайта лицензирован под <a href="http://people.freebsd.org/~phk">Beerware</a>:</p>
-<blockquote><p>"THE BEER-WARE LICENSE" (Revision 42):<br>
-Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.</p></blockquote>
-<p>(Ну, в общем, там про пиво говорится. Запомните, Вы должны мне пиво.)</p>
+<p>Код и контент данного сайта лицензирован под <a href="http://people.freebsd.org/~phk" title="Лицензия Beerware">Beerware</a>:
+<blockquote>
+  "THE BEER-WARE LICENSE" (Revision 42):<br>
+  Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.
+</blockquote>
+<small>(Ну, в общем, там про пиво говорится. Запомните, Вы должны мне пиво.)</small></p>
 
 <p>Данный сайт использует:
   <ul>
-    <li><a href="http://jekyllrb.com/">Jekyll</a>, который лицензирован под лицензией <a href="http://opensource.org/licenses/MIT">MIT</a>.</li>
-    <li>Исходная тема была создана <a href="https://github.com/orderedlist/minimal">Steve Smith</a> и лицензирована под <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
-    <li>Disqus, который используется для блока комментариев, имеет собственную <a href="http://help.disqus.com/customer/portal/articles/466260-terms-of-service">кастомную лицензию</a>.</li>
-    <li>Код для спойлеров был предложен <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> и <a href="http://habrahabr.ru/post/167151/">Defff</a>, и, судя по всему, он не имеет никакой лицензии.</li>
-    <li>Данный сайт использует RSS шаблон, который был предложен <a href="https://github.com/snaptortoise/jekyll-rss-feeds">snaptortoise</a>.</li>
-    <li>Google Custom Search имеет собственную <a href="https://support.google.com/customsearch/answer/1714300">кастомную лицензию</a>.</li>
-    <li>Sharethis тоже имеет собственную <a href="http://www.sharethis.com/legal/publisher-terms-of-use">кастомную лицензию</a>.</li>
+    <li><a href="http://jekyllrb.com/" title="Сайт Jekyll">Jekyll</a>, который лицензирован под лицензией <a href="http://opensource.org/licenses/MIT" title="Лицензия MIT">MIT</a>.</li>
+    <li>Исходная тема была создана <a href="https://github.com/orderedlist/minimal" title="GitHub">Steve Smith</a> и лицензирована под <a href="http://creativecommons.org/licenses/by/3.0" title="Лицензия CC BY-SA">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
+    <li>Disqus, который используется для блока комментариев, имеет собственную <a href="http://help.disqus.com/customer/portal/articles/466260-terms-of-service" title="Лицензия Disqus">кастомную лицензию</a>.</li>
+    <li>Код для спойлеров был предложен <a href="http://www.cyberforum.ru/post5368179.html" title="Пост на форуме">markeley</a> и <a href="http://habrahabr.ru/post/167151/" title="Пост на habrahabr">Defff</a>, и, судя по всему, он не имеет никакой лицензии.</li>
+    <li>Данный сайт использует RSS шаблон, который был предложен <a href="https://github.com/snaptortoise/jekyll-rss-feeds" title="GitHub">snaptortoise</a>.</li>
+    <li>Google Custom Search имеет собственную <a href="https://support.google.com/customsearch/answer/1714300" title="Лицензия GCS">кастомную лицензию</a>.</li>
+    <li>Sharethis тоже имеет собственную <a href="http://www.sharethis.com/legal/publisher-terms-of-use" title="Лицензия ShareThis">кастомную лицензию</a>.</li>
   </ul>
 </p>
 
-<p>Отдельное спасибо <a href="http://monztruo.deviantart.com/">Monztruo</a>, я позаимствовал у него <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">иконку</a>.</p>
+<p>Отдельное спасибо <a href="http://monztruo.deviantart.com/" title="Deviantart">Monztruo</a> (я позаимствовал у него <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946" title="Исходное изображение">иконку</a>) и <a href="http://hanabell1.deviantart.com/" title="Deviantart">HanaBell1</a> (<a href="http://hanabell1.deviantart.com/art/RES-Rainbow-PNG-398876448" title="Исходное изображение">симпатичная радуга</a>).</p>
 
-<p align="center">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
-<p align="right"><small>Хотя, кого в России е%$т лицензии?</small></p>
+<p style="text-align:center;">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
+<p style="text-align:right;"><small>Хотя, кого в России е%$т лицензии?</small></p>
