--- a/ru/index.html
+++ b/ru/index.html
@@ -11,31 +11,29 @@ title: arcanis
     <div class="wrapper">
       <header>
         <h1>{{ page.title }}</h1>
-
         <label class="spoiler">
           <input type="checkbox" tabindex="-1">
           <div class="box">
-            <a href="/ru/feed.xml"><img src="/resources/feed-icon-14x14.png"></a>
-            <a href="/ru/blog/">Блог</a> <span class="close">(скрыть)</span><span class="open">(показать)</span>
+            <a href="/ru/feed.xml" title="RSS"><img src="/resources/feed-icon-14x14.png" alt="RSS"></a>
+            <a href="/ru/blog/" title="Блог">Блог</a> <span class="close">(скрыть)</span><span class="open">(показать)</span>
             <blockquote>
-            {% for post in site.categories.ru limit:3 %}
-              <a href="{{ post.url }}">{{ post.title }}</a><br>
-            {% endfor %}
+              {% for post in site.categories.ru limit:3 %}
+                <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a><br>
+              {% endfor %}
             </blockquote>
           </div>
         </label>
-        <p class="view"><a href="/ru/projects/">Проекты</a><br>
-        <a href="ftp://repo.arcanis.name/repo">Репозиторий</a></p>
-        <p class="view"><a href="/ru/about">Обо мне</a></p>
-
+        <p class="view"><a href="/ru/projects/" title="Проекты">Проекты</a><br>
+        <a href="ftp://repo.arcanis.name/repo" title="Репозиторий">Репозиторий</a></p>
+        <p class="view"><a href="/ru/about" title="Обо мне">Обо мне</a></p>
       </header>
       <section>
 
-<h3><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Добро пожаловать</h3>
-<p>Добро пожаловать на мою домашнюю страничку, <code>`echo $USERNAME`</code>. Обо мне Вы можете прочитать по <a href="/ru/about">ссылке</a>. К сожалению, я не знаю html/php/ruby/прочее (но я знаю Google-фу! По крайней мере, я так думаю), поэтому эта страничка может выглядеть не очень красиво. Но я старался (ну или не совсем). В блоге я буду писать какие-нибудь статьи о науке, программировании, проживании в Archlinux и, может быть, о сопровождении пакетов. Также я создам странички для некоторых из <a href="https://github.com/arcan1s">моих проектов</a>.</p>
+<h3><a href="#welcome" class="anchor" name="welcome"><span class="octicon octicon-link"></span></a>Добро пожаловать</h3>
+<p>Добро пожаловать на мою домашнюю страничку, <code>`echo $USERNAME`</code>. Обо мне Вы можете прочитать по <a href="/ru/about" title="Обо мне">ссылке</a>. К сожалению, я не знаю html/php/ruby/прочее (но я знаю Google-фу! По крайней мере, я так думаю), поэтому эта страничка может выглядеть не очень красиво. Но я старался (ну или не совсем). В блоге я буду писать какие-нибудь статьи о науке, программировании, проживании в Archlinux и, может быть, о сопровождении пакетов. Также я создам странички для некоторых из <a href="https://github.com/arcan1s" title="GitHub">моих проектов</a>.</p>
 
-<h3><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Контакты</h3>
-<p>Если у Вас есть вопрос или что-нибудь еще, Вы можете <a href="/ru/about">связаться со мной</a>. Если Вы хотите предложить пул-реквест или сообщить о баге для этих страничек, не стесняйтесь посетить <a href="https://github.com/arcan1s">мой профиль на GitHub</a> и сделать это.</p>
+<h3><a href="#contact" class="anchor" name="contact"><span class="octicon octicon-link"></span></a>Контакты</h3>
+<p>Если у Вас есть вопрос или что-нибудь еще, Вы можете <a href="/ru/about" title="Обо мне">связаться со мной</a>. Если Вы хотите предложить пул-реквест или сообщить о баге для этих страничек, не стесняйтесь посетить <a href="https://github.com/arcan1s/arcan1s.github.io" title="Репозиторий сайта">репозиторий на GitHub</a> и сделать это.</p>
 
-<h3><a name="search" class="anchor" href="#search"><span class="octicon octicon-link"></span></a>Поиск по сайту</h3>
+<h3><a href="#search" class="anchor" name="search"><span class="octicon octicon-link"></span></a>Поиск по сайту</h3>
 {% include cse.html %}
