--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -14,35 +14,35 @@ groups:
             short: deadline
             description: <code>DeadLine widget</code> плазмоид, написанный на <code>Python2</code>. Может создавать задачи и добавлять напоминания к ним. Сейчас этот проект находится в состоянии пре-альфа. Может быть когда-нибудь я доделаю его.
             links:
-                - <a href="https://github.com/arcan1s/deadlinewidget">Репозиторий на GitHub</a>
+                - <a href="https://github.com/arcan1s/deadlinewidget" title="GitHub">Репозиторий на GitHub</a>
           - title: Oblikue strategies
             short: oblikuestrategies
-            description: <code>oblikue-strategies</code> плазмоид, написанный на <code>CPP</code>, который показывает случайные карты из Brian Eno и Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies">Oblique Strategies</a>. Это форк <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405">апплета для GNOME</a> с некоторыми дополнительными фичами.
+            description: <code>oblikue-strategies</code> плазмоид, написанный на <code>CPP</code>, который показывает случайные карты из Brian Eno и Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. Это форк <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">апплета для GNOME</a> с некоторыми дополнительными фичами.
             links:
-                - <a href="/ru/projects/oblikuestrategies">Домашняя страница</a>
-                - <a href="https://github.com/arcan1s/oblikuestrategies">Репозиторий на GitHub</a>
-                - <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">Страница на kde-look.org</a>
-                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">Пакет в AUR</a>
+                - <a href="/ru/projects/oblikuestrategies" title="Домашняя страница">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/oblikuestrategies" title="GitHub">Репозиторий на GitHub</a>
+                - <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">Страница на kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">Пакет в AUR</a>
           - title: Open on desktop
             short: openondesktop
-            description: <code>Open on desktop</code> выпадающее меню для <a href="http://dolphin.kde.org">Dolhpin</a>. Создает группу в контексстном меню, которое позволяет открыть файл на указанном рабочем столе. Имеет установочный скрипт, который написан на <code>Bash</code>.
+            description: <code>Open on desktop</code> выпадающее меню для <a href="http://dolphin.kde.org" title="Домашняя страница Dolphin">Dolhpin</a>. Создает группу в контексстном меню, которое позволяет открыть файл на указанном рабочем столе. Имеет установочный скрипт, который написан на <code>Bash</code>.
             links:
-                - <a href="https://github.com/arcan1s/openondesktop">Репозиторий на GitHub</a>
+                - <a href="https://github.com/arcan1s/openondesktop" title="GitHub">Репозиторий на GitHub</a>
           - title: py-text-monitor
             short: pytextmonitor
-            description: <code>py-text-monitor</code> минималистичный плазмоид, написанный на <code>Python2</code>. Он выглядит, как виджеты в <a href="http://awesome.naquadah.org/">Awesome WM</a>. Мой плазмоид хорошо и легко настраивается и не засоряет Ваш KDE. Также этот пакет имеет дополнительный <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a>, который написан на <code>CPP</code> (старые версии были написаны на <code>Python2</code>).
+            description: <code>py-text-monitor</code> минималистичный плазмоид, написанный на <code>Python2</code>. Он выглядит, как виджеты в <a href="http://awesome.naquadah.org/" title="Домашняя страница Awesome">Awesome WM</a>. Мой плазмоид хорошо и легко настраивается и не засоряет Ваш KDE. Также этот пакет имеет дополнительный <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Мануал для разработчиков">DataEngine</a>, который написан на <code>CPP</code> (старые версии были написаны на <code>Python2</code>).
             links:
-                - <a href="/ru/projects/pytextmonitor">Домашняя страница</a>
-                - <a href="https://github.com/arcan1s/pytextmonitor">Репозиторий на GitHub</a>
-                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">Страница плазмоида на kde-look.org</a>
-                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">Страница DataEngine на kde-look.org</a>
-                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">Пакет в AUR</a>
+                - <a href="/ru/projects/pytextmonitor" title="Домашняя страница">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/pytextmonitor" title="GitHub">Репозиторий на GitHub</a>
+                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124" title="kde-look">Страница плазмоида на kde-look.org</a>
+                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">Страница DataEngine на kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor" title="AUR">Пакет в AUR</a>
           - title: Kit system monitor
             short: sysmon
-            description: <code>Kit System Monitor</code> системный и хардварный монитор, основанный на EG Sysmon. Написан на языке, похожем на HTML, для <a href="http://netdragon.sourceforge.ne/">SuperKaramba</a> и имеет постой установочный скрипт, написанный на <code>Python2</code>. Это мой первый Open Source проект.
+            description: <code>Kit System Monitor</code> системный и хардварный монитор, основанный на EG Sysmon. Написан на языке, похожем на HTML, для <a href="http://netdragon.sourceforge.ne/" title="Домашняя страница SuperKaramba">SuperKaramba</a> и имеет постой установочный скрипт, написанный на <code>Python2</code>. Это мой первый Open Source проект.
             links:
-                - <a href="https://github.com/arcan1s/sysmon">Репозиторий на GitHub</a>
-                - <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">Страница на kde-look.org</a>
+                - <a href="https://github.com/arcan1s/sysmon" title="GitHub">Репозиторий на GitHub</a>
+                - <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246" title="kde-look">Страница на kde-look.org</a>
     - title: Демоны
       short: daemons
       projects:
@@ -50,15 +50,15 @@ groups:
             short: git-etc
             description: <code>git-etc</code> простой демон, который создает git репозиторий в указанной директории и создает коммит в указанный промежуток времени. Он написан на <code>Bash</code>. Также имеет простой графический интерфейс, написанный на <code>Python2</code> (<code>pyqt4</code>) для работы с созданным репозиторием.
             links:
-                - <a href="/ru/projects/git-etc">Домашняя страница</a>
-                - <a href="https://github.com/arcan1s/git-etc">Репозиторий на GitHub</a>
-                - <a href="https://aur.archlinux.org/packages/git-etc">Пакет в AUR</a>
+                - <a href="/ru/projects/git-etc" title="Домашняя страница">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/git-etc" title="GitHub">Репозиторий на GitHub</a>
+                - <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">Пакет в AUR</a>
           - title: queued
             short: queued
             description: <code>queued</code> демон для старта задач в очередь вычислений. Написан на <code>Bash</code>, создан как proof-of-concept.
             links:
-                - <a href="/ru/projects/queued">Домашняя страница</a>
-                - <a href="https://github.com/arcan1s/queued">Репозиторий на GitHub</a>
+                - <a href="/ru/projects/queued" title="Домашняя страница">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/queued" title="GitHub">Репозиторий на GitHub</a>
     - title: Научные программы
       short: science
       projects:
@@ -66,8 +66,8 @@ groups:
             short: moldyn
             description: Они представлены единственный репозиторием. Содержит некоторые программы для анализа молекулярно-динамических траекторий, используя методы статистической механики и некоторые математические (например, теория графов). Обычно, бекенд программы написаны на <code>C</code>, хотя иногда и на <code>Python2</code>. Некоторые из них имеют графический интерфейс, написанный на <code>CPP</code>.
             links:
-                - <a href="/ru/projects/moldyn">Домашняя страница</a>
-                - <a href="https://github.com/arcan1s/moldyn">Репозиторий на GitHub</a>
+                - <a href="/ru/projects/moldyn" title="Домашняя страница">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/moldyn" title="GitHub">Репозиторий на GitHub</a>
     - title: Утилиты
       short: utilities
       projects:
@@ -75,26 +75,26 @@ groups:
             short: extpkg
             description: <code>extract_pkglist</code> простой скрипт, написанный на <code>Python2</code> для создания списка установленных пакетов в ArchLinux.
             links:
-                - <a href="https://github.com/arcan1s/extract_pkglist">Репозиторий на GitHub</a>
+                - <a href="https://github.com/arcan1s/extract_pkglist" title="GitHub">Репозиторий на GitHub</a>
           - title: Food GUI
             short: foodgui
             description: <code>Food GUI</code> простая программа-калькулятор, использующая собственную базу данных. Написана на <code>Python2</code>. Рассчитывает белки, жиры и углеводы, а также калорийность и гликемический индекс съеденной пищи. Это мой первый проект с графическим интерфейсом и был написан just-for-fun (и для моей бывшей девушки). Также имеет бинарную версию под Win64.
             links:
-                - <a href="https://github.com/arcan1s/food_gui">Репозиторий на GitHub</a>
-                - <a href="https://aur.archlinux.org/packages/food_gui">Пакет в AUR</a>
+                - <a href="https://github.com/arcan1s/food_gui" title="GitHub">Репозиторий на GitHub</a>
+                - <a href="https://aur.archlinux.org/packages/food_gui" title="AUR">Пакет в AUR</a>
           - title: julius-actions
             short: julius-actions
-            description: <code>julius-actions</code> скрипт, написанный на <code>Python2</code> для работы с <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. Был сделан just-for-fun в мое свободное время. Работает нормально, но я им не пользуюсь.
+            description: <code>julius-actions</code> скрипт, написанный на <code>Python2</code> для работы с <a href="http://julius.sourceforge.jp/en_index.php" title="Домашняя страница Julius">julius</a>. Был сделан just-for-fun в мое свободное время. Работает нормально, но я им не пользуюсь.
             links:
-                - <a href="https://github.com/arcan1s/julius-actions">Репозиторий на GitHub</a>
+                - <a href="https://github.com/arcan1s/julius-actions" title="GitHub">Репозиторий на GitHub</a>
           - title: Netctl GUI
             short: netctl-gui
             description: <code>Netctl GUI</code> графическая оболочка для <code>netctl</code> (набор скриптов для поднятия сети в Arch'е). Написан на <code>CPP</code> с использованием библиотеки <code>Qt4</code>. На текущим момент умеет работать с профилями, в том числе создавать новые, а также умеет подключаться к WiFi. Также предоставляет виджет и DataEngine для KDE.
             links:
-                - <a href="/ru/projects/netctl-gui">Домашняя страница</a>
-                - <a href="https://github.com/arcan1s/netctl-gui">Репозиторий на GitHub</a>
-                - <a href="http://kde-apps.org/content/show.php?content=164490">Страница на kde-apps.org</a>
-                - <a href="https://aur.archlinux.org/packages/netctl-gui">Пакет в AUR</a>
+                - <a href="/ru/projects/netctl-gui" title="Домашняя страница">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/netctl-gui" title="GitHub">Репозиторий на GitHub</a>
+                - <a href="http://kde-apps.org/content/show.php?content=164490" title="kde-apps">Страница на kde-apps.org</a>
+                - <a href="https://aur.archlinux.org/packages/netctl-gui" title="AUR">Пакет в AUR</a>
 ---
   <body>
     <div class="wrapper">
@@ -109,15 +109,15 @@ groups:
       </header>
       <section>
 
-  {% for group in page.groups %}
-    <h1><a name="{{ group.short }}" class="anchor" href="#{{ group.short }}"><span class="octicon octicon-link"></span></a>{{ group.title }}</a></h1>
-    {% for project in group.projects %}
-      <h2><a name="{{ project.short }}" class="anchor" href="#{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h2>
-      <p>{{ project.description }}</p>
-      <p><ul>
-        {% for link in project.links %}
-          <li>{{ link }}</li>
-        {% endfor %}
-      </ul></p>
-    {% endfor %}
+{% for group in page.groups %}
+  <h1><a href="#{{ group.short }}" class="anchor" name="{{ group.short }}"><span class="octicon octicon-link"></span></a>{{ group.title }}</a></h1>
+  {% for project in group.projects %}
+    <h2><a href="#{{ project.short }}" class="anchor" name="{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h2>
+    <p>{{ project.description }}</p>
+    <p><ul>
+      {% for link in project.links %}
+        <li>{{ link }}</li>
+      {% endfor %}
+    </ul></p>
   {% endfor %}
+{% endfor %}
